--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^1.3.0",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "mongodb": "^2.0.39",
     "mongoose": "^4.1.0",
+    "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "supertest": "^1.0.1"
   }
 }
