--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
+    "serve-favicon": "^2.3.0",
     "supertest": "^1.0.1"
   }
 }
