--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "assert": "^1.3.0",
+  "dependencies": {
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
@@ -21,7 +20,10 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.3.0",    
+  },
+  "devDependencies": {
+    "assert": "^1.3.0",
     "supertest": "^1.0.1"
   }
 }
