--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.4",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
@@ -20,7 +21,7 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
-    "serve-favicon": "^2.3.0" 
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "assert": "^1.3.0",
