--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.7",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
     "supertest": "^1.0.1"
   }
 }
