--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "karma": "^0.13.7",
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
+    "karma-ng-html2js-preprocessor": "^0.1.2",
     "supertest": "^1.0.1"
   }
 }
