--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.2.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.7",
     "karma-chrome-launcher": "^0.2.0",
