--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "devDependencies": {
     "assert": "^1.3.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.7",
