--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
+    "lodash": "^3.10.1",
     "mongodb": "^2.0.39",
     "mongoose": "^4.1.0",
     "mongoose-unique-validator": "^0.4.1",
