--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.0",
+    "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
