--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
     "karma-ng-html2js-preprocessor": "^0.1.2",
+    "mongoose-autopopulate": "^0.3.0",
     "supertest": "^1.0.1"
   }
 }
