--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.4.2",
     "bcrypt": "^0.8.4",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
