--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "tango",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "0.12.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js"
