--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.11.3",
     "lodash": "^3.10.1",
     "mongodb": "^2.0.39",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^4.1.0",
     "mongoose-unique-validator": "^0.4.1",
     "passport": "^0.2.2",
